<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DatosUsuario">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mtitulo2"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mLinea3"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mLinea4"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/img"
            android:layout_marginLeft="160dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtvedadAS"
            android:paddingLeft="60dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/edtAños"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtvhintedadAS"
            android:inputType="textPersonName"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="18dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtvtallaAS"
            android:paddingLeft="60dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/edtTalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtvhintallaAS"
            android:inputType="textPersonName"
            android:textSize="18dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtvpesoAS"
            android:paddingLeft="60dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/edtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txthintvpesoAS"
            android:textSize="18dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnCalcularTMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round"
            android:onClick="onClick"
            android:text="@string/btnComenzar"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txtprueba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>
</ScrollView>