<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".ElegirTipoDieta">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+Eat"
            android:paddingTop="30dp"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:paddingBottom="35dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mLinea1"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mLinea2"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnSaludable"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/round"
        android:textColor="#fff"
        android:onClick="IrAlimentacionSalu"
        android:text="@string/btnAlimentacionS"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnBajarPeso"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round"
        android:onClick="IrPerderPeso"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/btnBajarPeso"
        android:textColor="#fff" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round"
        android:onClick="IrGanarPeso"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/btnSubirPeso"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtvTMB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</LinearLayout>