<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcularConsumoPromedio">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mtitulo3"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mLinea5"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mLinea6"
        android:textAlignment="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ProgressBar
        android:id="@+id/pgbarkcal"
        style="?android:attr/progressBarStyle"
        android:maxWidth="300dp"
        android:minWidth="200dp"
        android:maxHeight="300dp"
        android:minHeight="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/txtkcal"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:height="20dp"

            android:text="Kcal"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="Continuar"
        android:paddingLeft="60dp"
        android:paddingRight="50dp"
        android:text="@string/btnSeleccionActiv"
        android:background="@drawable/round"
        android:textColor="#fff"/>

</LinearLayout>